algorithm_p1_week3/deliverables/memo
See the Assessment Guide for information on how to interpret this report.

ASSESSMENT SUMMARY

Compilation:  FAILED (25 errors, 0 warnings)
API:          FAILED (3 errors)

Spotbugs:     No tests available for autograding.
PMD:          PASSED
Checkstyle:   No tests available for autograding.

Correctness:  No tests available for autograding.
Memory:       No tests available for autograding.
Timing:       No tests available for autograding.

Aggregate score: 0.00%
[Compilation: 5%, API: 5%, Spotbugs: 0%, PMD: 0%, Checkstyle: 0%, Correctness: 60%, Memory: 10%, Timing: 20%]

ASSESSMENT DETAILS

The following files were submitted:
----------------------------------
2.8K Sep 26 12:38 BruteCollinearPoints.java
1.9K Sep 26 12:38 FastCollinearPoints.java
1.9K Sep 26 12:38 Point.java


********************************************************************************
*  COMPILING                                                                    
********************************************************************************


% javac Point.java
*-----------------------------------------------------------
Point.java:53: error: illegal start of expression
        public int compare (Point q1, Point q2) {
        ^
Point.java:53: error: ';' expected
        public int compare (Point q1, Point q2) {
                          ^
Point.java:53: error: ';' expected
        public int compare (Point q1, Point q2) {
                                           ^
Point.java:53: error: not a statement
        public int compare (Point q1, Point q2) {
                                            ^
Point.java:53: error: ';' expected
        public int compare (Point q1, Point q2) {
                                              ^
5 errors

% javac BruteCollinearPoints.java
*-----------------------------------------------------------
./Point.java:53: error: illegal start of expression
        public int compare (Point q1, Point q2) {
        ^
./Point.java:53: error: ';' expected
        public int compare (Point q1, Point q2) {
                          ^
./Point.java:53: error: ';' expected
        public int compare (Point q1, Point q2) {
                                           ^
./Point.java:53: error: not a statement
        public int compare (Point q1, Point q2) {
                                            ^
./Point.java:53: error: ';' expected
        public int compare (Point q1, Point q2) {
                                              ^
BruteCollinearPoints.java:10: error: method checkDuplicatePoints in class BruteCollinearPoints cannot be applied to given types;
        if (checkDuplicatePoints() == true) {
            ^
  required: Point[]
  found: no arguments
  reason: actual and formal argument lists differ in length
BruteCollinearPoints.java:56: error: cannot find symbol
            copy[i] = segmentIDs[i];
                      ^
  symbol:   variable segmentIDs
  location: class BruteCollinearPoints
BruteCollinearPoints.java:58: error: cannot find symbol
        segmentIDs = copy;
        ^
  symbol:   variable segmentIDs
  location: class BruteCollinearPoints
./Point.java:7: error: cannot find symbol
        this.x = x;
            ^
  symbol: variable x
./Point.java:8: error: cannot find symbol
        this.y = y;
            ^
  symbol: variable y
10 errors

% javac FastCollinearPoints.java
*-----------------------------------------------------------
./Point.java:53: error: illegal start of expression
        public int compare (Point q1, Point q2) {
        ^
./Point.java:53: error: ';' expected
        public int compare (Point q1, Point q2) {
                          ^
./Point.java:53: error: ';' expected
        public int compare (Point q1, Point q2) {
                                           ^
./Point.java:53: error: not a statement
        public int compare (Point q1, Point q2) {
                                            ^
./Point.java:53: error: ';' expected
        public int compare (Point q1, Point q2) {
                                              ^
FastCollinearPoints.java:62: error: cannot find symbol
            copy[i] = segmentIDs[i];
                      ^
  symbol:   variable segmentIDs
  location: class FastCollinearPoints
FastCollinearPoints.java:64: error: cannot find symbol
        segmentIDs = copy;
        ^
  symbol:   variable segmentIDs
  location: class FastCollinearPoints
./Point.java:7: error: cannot find symbol
        this.x = x;
            ^
  symbol: variable x
./Point.java:8: error: cannot find symbol
        this.y = y;
            ^
  symbol: variable y
./Point.java:12: error: cannot find symbol
        StdDraw.point(x, y);
                      ^
  symbol:   variable x
  location: class Point
10 errors


================================================================


Checking the APIs of your programs.
*-----------------------------------------------------------
Point: The file 'Point.class' could not be found.

BruteCollinearPoints: The file 'BruteCollinearPoints.class' could not be found.

FastCollinearPoints: The file 'FastCollinearPoints.class' could not be found.

================================================================


ABORTING: either the compilation or API test failed.